objects/vlocity_cmt__ActivityTemplate__c.object
<CustomObject>
    <description>Activity Templates define a collection of template activities to be automatically generated each time a registered object&apos;s stage changes.</description>
    <fields>
        <fullName>vlocity_cmt__EnabledObjectsAPI__c</fullName>
        <label>Enabled for Objects (API)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Case__c</fullName>
                </value>
                <value>
                    <fullName>Incident__c</fullName>
                </value>
                <value>
                    <fullName>Application__c</fullName>
                </value>
                <value>
                    <fullName>All</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Publish__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Publish</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Stage__c</fullName>
        <label>Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Initial</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Activity Template</label>
    <listViews>
        <fullName>vlocity_cmt__All</fullName>
        <columns>NAME</columns>
        <columns>vlocity_cmt__Type__c</columns>
        <columns>vlocity_cmt__Stage__c</columns>
        <columns>vlocity_cmt__Publish__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Description</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Activity Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>